# rentabycicle.com

./: .editorconfig  .gitignore  config.conf  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile  dotenv-example.txt  pyproject.toml  requirements.txt
bycicle/: admin.py  models.py  urls.py  views.py
bycicle/migrations/: 0001_initial.py  0002_rename_bycicle_compamy_bycicle_bycicle_company.py
code/: base_view.py
config/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
templates/: base.html
templates/bycicle/: bycicle.html  index.html  new.html
templates/main/: error400.html  error403.html  error404.html  error500.html  index.html
